crates/reinhardt-pages/tests/ui/wasm_server_api/fail/signature_mismatch.stderr
error: `#[wasm]` and `#[server]` variants for `target_name` must have matching signatures
  --> tests/ui/wasm_server_api/fail/signature_mismatch.rs:13:9
   |
13 |     pub fn target_name() -> &'static str {
   |            ^^^^^^^^^^^
